--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!-- Strava API Java SDK -->
+        <dependency>
+            <groupId>com.github.danshannon</groupId>
+            <artifactId>javastrava-api</artifactId>
+            <version>2.0.0-alpha</version>
+        </dependency>
+
+        <!-- RxJava (required by the SDK) -->
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>1.3.8</version>
+        </dependency>
+    </dependencies>
 </project>
