--- a/javastrava_API-Integration/src/pom.xml
+++ b/javastrava_API-Integration/src/pom.xml
@@ -159,3 +159,9 @@
 	</organization>
 	<version>2.0.0-SNAPSHOT</version>
 </project>
+
+<dependency>
+<groupId>com.google.code.gson</groupId>
+<artifactId>gson</artifactId>
+<version>2.10.1</version>
+</dependency>
